# raytracer

./: Cargo.toml  README.md  build.rs
examples/: 01camera_and_planes.rs  01planes.rs  02camera_and_spheres.rs  02spheres.rs  03lights.rs  04pointlights.rs  05diffuse.rs  06specular.rs  07reflection.rs  08background.rs
src/: background.rs  camera.rs  color.rs  lib.rs  light.rs  main.rs  materials.rs  math.rs  meshes.rs  surface.rs
