[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "*"

[[example]]
name = "01planes"

[[example]]
name = "02spheres"

[[example]]
name = "03lights"

[[example]]
name = "04pointlights"

[[example]]
name = "05diffuse"

[[example]]
name = "06specular"

[[example]]
name = "07reflection"